--- a/src/com/barosanu/view/LoginWindow.fxml
+++ b/src/com/barosanu/view/LoginWindow.fxml
@@ -7,13 +7,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="325.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.barosanu.controller.LoginWindowController">
+<AnchorPane prefHeight="325.0"
+            prefWidth="510.0"
+            xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+>
    <children>
       <Button layoutX="192.0" layoutY="314.0" mnemonicParsing="false" onAction="#loginButtonAction" prefHeight="48.0" prefWidth="97.0" text="Login" />
       <Label layoutX="41.0" layoutY="171.0" prefHeight="35.0" prefWidth="80.0" text="Email Adress" />
       <Label layoutX="41.0" layoutY="222.0" prefHeight="21.0" prefWidth="64.0" text="Password" />
       <TextField fx:id="emailAddressField" layoutX="145.0" layoutY="171.0" prefHeight="25.0" prefWidth="281.0" />
       <PasswordField fx:id="passwordField" layoutX="145.0" layoutY="220.0" prefHeight="25.0" prefWidth="281.0" />
-      <Label fx:id="errorLabel" layoutX="209.0" layoutY="390.0" prefHeight="17.0" prefWidth="8.0" />
+      <Label layoutX="222.0" layoutY="331.0" prefHeight="16.0" prefWidth="44.0" />
    </children>
 </AnchorPane>
